# STMSynth

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
CMake/: STM32.cmake  STM32F407VG_FLASH.ld  arm-none-eabi-gcc.cmake  debug.gdb  stm32f4discovery.cfg
CMake/Modules/: FindSTLinkUtility.cmake  FindSTM32F4xx.cmake
Drivers/BSP/Components/stmpe1600/: Release_Notes.html  stmpe1600.c  stmpe1600.h
Drivers/BSP/Components/wm8994/: Release_Notes.html  wm8994.c  wm8994.h
Drivers/BSP/STM32F4-Discovery/: stm32f4_discovery_audio.c  stm32f4_discovery_audio.h
Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Middleware/FreeRTOS/Source/: tasks.c
Middleware/STM32_USB_Device_Library/: Release_Notes.html
Middleware/STM32_USB_Device_Library/Class/AUDIO/Inc/: usbd_audio.h  usbd_audio_if_template.h
Middleware/STM32_USB_Device_Library/Class/AUDIO/Src/: usbd_audio.c  usbd_audio_if_template.c
Middleware/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h  usbd_customhid_if_template.h
Middleware/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c  usbd_customhid_if_template.c
Middleware/STM32_USB_Device_Library/Class/DFU/Inc/: usbd_dfu.h  usbd_dfu_media_template.h
Middleware/STM32_USB_Device_Library/Class/DFU/Src/: usbd_dfu.c  usbd_dfu_media_template.c
Middleware/STM32_USB_Device_Library/Class/HID/Inc/: usbd_hid.h
Middleware/STM32_USB_Device_Library/Class/Template/Inc/: usbd_template.h
Middleware/STM32_USB_Device_Library/Class/Template/Src/: usbd_template.c
QtGui/: CMakeLists.txt
src/: Audio.cc  Audio.h  FreeRTOSConfig.h  cppcalls.cc  main.c  main.cc  main.h  midi.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c  system_stm32f4xx.c
src/config/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
src/synthesizer/: MoogVoice.cc  MoogVoice.h  SynthVoice.cc  SynthVoice.cpp  SynthVoice.h  Synthesizer.cc  Synthesizer.h
src/synthia/: Controllable.cc  Controllable.h  Delay.cc  Delay.h  Effect.h  Envelope.cc  Envelope.h  Generator.cpp  Generator.h  Lowpass.cc  Lowpass.h  PulseOscillator.cc  PulseOscillator.h  SError.cc  SError.h  SObject.cpp  SObject.h  SineOscillator.cc  SineOscillator.cpp  SineOscillator.h  SoundFile.cc  SoundFile.cpp  SoundFile.h  SoundLoop.cc  SoundLoop.h  SwitchableWavetableOscillator.cc  SwitchableWavetableOscillator.h  SynthContext.cc  SynthContext.h  Synthia.h  SynthiaUtils.cpp  SynthiaUtils.h  Triggerable.h  WavetableOscillator.cc  WavetableOscillator.cpp  WavetableOscillator.h
src/synthia/wavetables/: wavetable_pulse.cc  wavetable_ramp.cc  wavetable_samples.h  wavetable_sine.cc  wavetable_triangle.cc
src/tasks/: MidiTask.cc  MidiTask.h  TestTask.cc  TestTask.h  cpp_task.cc  cpp_task.h
src/usb/: usbd_conf.c  usbd_conf.h  usbd_desc.c  usbd_desc.h  usbd_hid.c  usbd_midi.c  usbd_midi.c.orig  usbd_midi.h
testTool/TestTool/Novocaine/: Novocaine.h
testTool/TestTool/TestTool/: ABAudioManager.h  ABAudioManager.mm  AppDelegate.h  AppDelegate.m  AppDelegate.mm  Info.plist  main.m
testTool/TestTool/TestTool.xcodeproj/: project.pbxproj
testTool/TestTool/TestTool.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
testTool/TestTool/TestTool.xcodeproj/xcuserdata/andybest.xcuserdatad/xcschemes/: TestTool.xcscheme
testTool/TestTool/TestTool/Base.lproj/: MainMenu.xib
testTool/TestTool/TestToolTests/: Info.plist  TestToolTests.m
testTool/TestTool/TheAmazingAudioEngine/: AEAudioController.h
testTool/pd/: controlchange.pd  synthController.pd
testTool/wavConverter/: wav2c.py
